--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@
     }
 
     & h3 {
-      @apply text-white font-bold text-base line-clamp-1;
+      @apply text-white font-bold text-base line-clamp-1 text-left;
     }
 
     & .content {
